# AI-ML-Portfolio

./: .gitignore  LICENSE  README.md  package-lock.json
2-way-recommender/: Readme.md
action-taker-chatbot/: Readme.md  main.py  pyproject.toml
rag-chatbot/: Readme.md  index.js  negocios.json  package-lock.json  package.json
represent-me-chatbot/: .env.example  Readme.md  app.py  chat-hf-deploy.py  pyproject.toml
represent-me-chatbot/me/: summary.txt
two-way-recommender/: Readme.md  app.py  candidates.json  jobs.json  pyproject.toml  requirements.txt
two-way-recommender/data/: candidate_index.faiss  candidate_meta.json  candidates.json  job_index.faiss  job_meta.json  jobs.json
two-way-recommender/frontend/: README.md  index.html  package-lock.json  package.json
two-way-recommender/frontend/src/: App.jsx  index.css
two-way-recommender/frontend/src/components/: CandidateCard.jsx  JobCard.jsx  Rating.jsx
two-way-recommender/frontend/src/i18n/: index.js
two-way-recommender/frontend/src/pages/: ApplicantDashboard.jsx  CreateJob.jsx  Health.jsx  JobsList.jsx  Login.jsx  ProfileView.jsx  RecruiterDashboard.jsx
virtualme-huggingface-deploy/: README.md
virtualme-huggingface-deploy/app/: .uvignore  pyproject.toml
virtualme-huggingface-deploy/app/src/: README.md  app.py  requirements.txt
virtualme-huggingface-deploy/app/src/me/: summary.txt
