[project]
name = "two-way-recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio==4.12.0",
    "beautifultable==1.1.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "distlib==0.4.0",
    "faiss-cpu==1.13.0",
    "filelock==3.19.1",
    "flask==2.1.3",
    "flask-cors==3.0.10",
    "fsspec==2025.12.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.36.0",
    "idna==3.11",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "joblib==1.5.2",
    "markupsafe==3.0.3",
    "mpmath==1.3.0",
    "networkx==3.6",
    "nltk==3.9.2",
    "numpy==1.26.4",
    "packaging==25.0",
    "pillow==12.0.0",
    "pipenv==2025.0.4",
    "platformdirs==4.4.0",
    "pysondb==1.6.7",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "regex==2025.11.3",
    "requests==2.32.5",
    "safetensors==0.7.0",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "sentence-transformers==5.1.2",
    "sentencepiece==0.2.1",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.1",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "tqdm==4.67.1",
    "transformers==4.57.3",
    "typer-slim==0.20.0",
    "typing-extensions==4.15.0",
    "urllib3==2.5.0",
    "virtualenv==20.34.0",
    "wcwidth==0.2.14",
    "werkzeug==2.3.8",
]
